# macros-update

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  task.md
.github/workflows/: ci.yml  pr-title-checker.yml
docs/: README.md  data-model.md  developer-guide.md
examples/00-basic/: feature_store.json  movie_feature_view.json
src/: cli.rs  commands.rs  data_source.rs  feature.rs  feature_registry.rs  feature_store.rs  lib.rs  main.rs  provider.rs  storage.rs  transformation.rs
src/feature/: entity.rs  feature_view.rs  field.rs  graph.rs  transformation.rs
src/transformation/: built_in_fns.rs  common.rs  cypher_result.rs  dataframe.rs  graph.rs  transformation_context.rs
src/transformation/built_in_fns/: aggregation.rs  random_walk.rs
src/transformation/graph/: multiple_graphs.rs  select.rs  single_graph.rs
tests/: cli.rs
